<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_weight="1"
        android:onClick="onMessageButtonClick_Event"
        android:text="@string/title_button_button3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button5"
        android:layout_weight="1"
        android:text="@string/title_activity_phone_info" />

    <Button
        android:id="@+id/buttonCapture"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="0dp"
        android:layout_weight="1"
        android:text="@string/title_activity_capture" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignLeft="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_weight="1"
        android:text="@string/title_activity_webview_" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_toRightOf="@+id/button4"
        android:layout_weight="1"
        android:text="@string/title_activity_web_view_client" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_weight="1"
        android:text="@string/title_voiceRecognition" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_below="@+id/editText1"
        android:layout_toRightOf="@+id/button1"
        android:layout_weight="1"
        android:text="@string/title_VoiceSave" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignLeft="@+id/button6"
        android:layout_below="@+id/button6"
        android:layout_weight="1"
        android:text="TextView" />

</LinearLayout>